--- a/exos/3_dom/index.html
+++ b/exos/3_dom/index.html
@@ -10,10 +10,10 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/latest/normalize.css"
     />
-    <link rel="stylesheet" href="../../../styles/reset.css" />
-    <link rel="stylesheet" href="../../../styles/style.css" />
+    <link rel="stylesheet" href="../../styles/reset.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
 
-    <script src="./index.js" defer></script>
+    <script src="index.js" defer></script>
 
     <title>DOM</title>
   </head>
@@ -21,5 +21,9 @@
   <body>
     <h1>DOM</h1>
     <section id="exo1"></section>
+    <section id="exo2"></section>
+    <section id="exo3"></section>
+    <section id="exo4"></section>
+
   </body>
 </html>
